@@ -1,3 +1,8 @@
+2000-11-07 18:02:26  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* mm-uu.el (mm-uu-type-alist): Don't test pgp stuff.
+	(mm-uu-pgp-encrypted-extract): Clean mml2015 buffer.
+
 2000-11-07 14:33:19  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* gnus-art.el (gnus-mime-display-part): Show MIME security button.
